kubernetes/yaml/istio/sample/v1/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - "demo.ops.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx.ops.svc.cluster.local # kubernetes service name
            port:
              number: 80
